--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
     color: red;
 }
 
-.content-center{
-    
+.content-center {
+    text-align: center;
+}
+
+.bg-grey {
+    background-color: rgb(192, 192, 192);
+}
+
+hr {
+    border: 2px solid rgb(159, 130, 1);
 }
